tests/negative/neg_pr113_variant_range_choice.safe
package neg_pr113_variant_range_choice
   type packet (count : integer = 0) is
      record
         case count
            when 0 to 3
               value : integer;



